add some card styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,13 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: lightgrey;
+  background-color: rgb(240, 240, 240);
 }
 
 h1 {
